# GeneticAlgorithm

./: CMakeLists.txt  DeterminingOptimalSearchAlgorithmsUsingGeneticAlgorithms.docx  README.md  Using Genetic Algorithm as a Metaheuristic for Search.pptx
TestProblems/: algorithm_names.txt  scores.txt
include/ANN/: FeedForwardANN.hpp
include/ANN/Activation_Functions/: Activation_functions.hpp  Activation_functions_types.hpp  activation_functions.hpp  sigmoid.hpp  step.hpp
include/ANN/Neurons/: ANN_layers.hpp  ANN_neuron.hpp
include/CNN/: convolutional_NN.hpp
include/ExpectedData/: expected_data.hpp
include/GA/: GeneticAlgorithmBool.hpp
include/SearchAlgorithms/: Algorithm.hpp  Algorithm_names.hpp
include/SearchAlgorithms/Algorithm_types/: Astar_heuristic.hpp  Astar_search.hpp
include/SearchAlgorithms/Graphs/: Finite_graph.hpp  Graph_edge.hpp  Graph_node.hpp  Graph_nodes.hpp  Nav_graph_edge.hpp  Nav_graph_node.hpp  Nav_graph_nodes.hpp  Problem_score.hpp  Search_scorer.hpp  Searcher.hpp  Sparse_graph.hpp
include/Utilities/: Method_scorer.hpp  Useful_constants.hpp  Utilities.hpp  read_file.hpp
include/Utilities/2D/: Vector2D.hpp
src/ANN/: FeedForwardANN.cpp
src/ANN/Neurons/: ANN_layers.cpp
src/GA/: GeneticAlgorithmBool.cpp
src/Utilities/: Method_scorer.cpp  read_file.cpp
src/Utilities/Graphs/: Finite_graph.cpp
